fix layout on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,9 +29,9 @@ body {
   background-color: #fff;
   display: grid;
   grid-auto-rows: auto 1fr auto;
-  grid-template-columns: 1fr minmax(20rem, 60rem) 1fr;
+  grid-template-columns: 1fr minmax(10rem, 60rem) 1fr;
   min-height: 100dvh;
-  gap: 1rem;
+  gap: 1rem 0;
 
   & > * {
     grid-column: 2;
@@ -46,7 +46,7 @@ header {
   display: grid;
   grid-template-columns: subgrid;
   justify-items: center;
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 0;
 
   & > * {
     grid-column: 2;
@@ -61,6 +61,7 @@ header {
     max-height: 20rem;
     grid-column: 2;
     justify-self: center;
+    width: 100%;
   }
 
   & nav {
@@ -78,9 +79,12 @@ header {
       color: #fff;
       text-decoration: none;
       font-size: 1.2rem;
+        padding: .5rem 1rem;
 
       &.current {
-        color: #e2001a;
+        color: #002d56;
+        background-color: #fff;
+        border-radius: .5rem .5rem 0 0;
       }
     }
   }
